--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <span class="tooltip">
     <button class="tooltip_btn" aria-describedby="tttfffe">fefeefe</button>
-    <span class"tooltip_txt" tole="tooltip" id="tttfffe">
+    <span class"tooltip_txt" tole="tooltip" id="tttfffe">gi
     <span class"visually-hidden">Тултип:
     fewfhwifwifhwu
     </span>
